docs/attachment/cert-manager/70-clusterissuer.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: 8ops-root-ca-clusterissuer # 自动签发注解
  labels:
    app: ingress-tls-auto
  name: ingress-tls-auto
  namespace: default
spec:
  ingressClassName: external
  rules:
  - host: ingress-tls-auto.8ops.top
    http:
      paths:
      - backend:
          service:
            name: echoserver
            port:
              number: 8080
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - 8ops.top
    - www.8ops.top
    - ingress-tls-auto.8ops.top
    - "*.8ops.top"
    secretName: tls-8ops.top-auto # 自动生成 secret 名称
