docs/attachment/cert-manager/71-certificate-dnspod-imroc-nextn.cn.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: dnspod-imroc-clusterissuer
  labels:
    app: ingress-dnspod-imroc-auto-nextn
  name: ingress-dnspod-imroc-auto-nextn
  namespace: default
spec:
  ingressClassName: external
  rules:
  - host: ingress-dnspod-imroc-auto.nextn.cn
    http:
      paths:
      - backend:
          service:
            name: echoserver
            port:
              number: 8080
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - nextn.cn
    - "*.nextn.cn"
    secretName: tls-nextn.cn-auto
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app: ingress-dnspod-imroc-wildcard-nextn
  name: ingress-dnspod-imroc-wildcard-nextn
  namespace: default
spec:
  ingressClassName: external
  rules:
  - host: ingress-dnspod-imroc-wildcard.nextn.cn
    http:
      paths:
      - backend:
          service:
            name: echoserver
            port:
              number: 8080
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - ingress-dnspod-imroc-wildcard.nextn.cn
    secretName: tls-nextn.cn-wildcard
