docs/attachment/cert-manager/71-certificate-dnspod-imroc.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: dnspod-imroc-clusterissuer
  labels:
    app: ingress-dnspod-imroc-auto
  name: ingress-dnspod-imroc-auto
  namespace: default
spec:
  ingressClassName: external
  rules:
  - host: ingress-dnspod-imroc-auto.8ops.top
    http:
      paths:
      - backend:
          service:
            name: echoserver
            port:
              number: 8080
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - 8ops.top
    - "*.8ops.top"
    secretName: tls-8ops.top-auto
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app: ingress-dnspod-imroc-wildcard
  name: ingress-dnspod-imroc-wildcard
  namespace: default
spec:
  ingressClassName: external
  rules:
  - host: ingress-dnspod-imroc-wildcard.8ops.top
    http:
      paths:
      - backend:
          service:
            name: echoserver
            port:
              number: 8080
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - ingress-dnspod-imroc-wildcard.8ops.top
    secretName: tls-8ops.top-wildcard
