docs/attachment/cert-manager/72-certificate-dnspod-qqshfox.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: cert-manager-webhook-dnspod-qqshfox-cluster-issuer
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/limit-rps: "100"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  labels:
    app: ingress-dnspod-qqshfox-auto
  name: ingress-dnspod-qqshfox-auto
  namespace: default
spec:
  ingressClassName: external
  rules:
  - host: ingress-dnspod-qqshfox-auto.8ops.top
    http:
      paths:
      - backend:
          service:
            name: echoserver
            port:
              number: 8080
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - "8ops.top"
    - "*.8ops.top"
    secretName: tls-8ops.top-auto
